<resources>
    <string name="app_name">Tindergree</string>
    <string name="logo_name">Tindergree</string>
    <string name="logo_description">like tinder, but for pets</string>
    <string name="password_hint">Password</string>
    <string name="login">login</string>
    <string name="register">create account</string>
    <string name="email_address">E-mail address</string>
    <string name="email_hint">tindergree@gmail.com</string>
    <string name="first_time">First time? Create an account here.</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="confirm_pasword">Confirm password</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="addPhotosOfPet">Add photos of your pet</string>
    <string name="tellOthersAboutYourPet">Tell others about your pet</string>
    <string name="incognitoText">Enable Incognito mode to hide your pet from the match queue of the other pets.
        However, the matches your pet already has can still view your pet.</string>
    <string name="notificationSettings">Notifications</string>
    <string name="darkmodeSettings">Dark Mode</string>
    <string name="settingsHeader">Settings</string>
    <string name="locationTitle">Current location</string>
    <string name="developerNotes">Developer notes</string>
    <string name="logOut">Log out</string>
    <string name="deleteAccount">Delete account</string>
    <string name="dog">Dog</string>
    <string name="cat">Cat</string>
    <string name="birthday">Birthday</string>
    <string name="breed">Breed</string>
    <string name="corgi">Corgi</string>
    <string name="name">Name</string>
    <string name="milo">Milo</string>
    <string name="continueText">Continue</string>
    <string name="profile">Profile</string>
    <string name="aboutMe">About your pet</string>
    <string name="firstPhoto">The first photo on the upper left will be your profile picture that is first seen by other users.</string>
    <string name="aboutTindergree">Tindergree is a geosocial networking and relationship-pairing mobile application for cats and dogs.
        There is an online account system where users can register and login to use this app.
        After account creation, the user will then create a profile for their pet, with details specifying name,
        location, and personal description of their pet, among others.
        The user can find other matches for their pet using the app.
        Tindergree shows the user a list of potential matches, and the user can either swipe left/right to either
        send a match request, or move to the next potential match. When a user finds a good match for their pet,
        they can send a match request to that profile, and that user receiving the match
        request will be prompted about a new match request, where they can either accept or reject the match.
        Once the request has been accepted, the two users can now send real-time messages to each other.</string>
</resources>