<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#F8FFF0"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_register"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F8FFF0">

        <!-- TODO (3) Add icons to each edit text    -->
        <!-- TODO (4) Change the font of edit text hints if necessary  -->
        <TextView
            android:id="@+id/tv_register_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:clickable="true"
            android:onClick="loginRedirectOnClick"
            android:text="@string/already_have_account"
            android:textColor="@color/red"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@+id/gl_register_right_of_image"
            app:layout_constraintStart_toStartOf="@+id/gl_register_left_of_email"
            app:layout_constraintTop_toBottomOf="@+id/btn_register" />

        <EditText
            android:id="@+id/et_register_emailaddress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/layout_border"
            android:backgroundTint="@color/white"
            android:drawableLeft="@drawable/ic_email"
            android:drawablePadding="16dp"
            android:ems="10"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:textCursorDrawable="@drawable/cursor_orange"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/gl_register_right_of_image"
            app:layout_constraintStart_toStartOf="@+id/gl_register_left_of_email"
            app:layout_constraintTop_toBottomOf="@+id/tv_register_logo_description" />

        <EditText
            android:id="@+id/et_register_first_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/layout_border"
            android:backgroundTint="@color/white"
            android:drawableLeft="@drawable/ic_first_name"
            android:drawablePadding="16dp"
            android:ems="10"
            android:hint="@string/first_name"
            android:inputType="text"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:textCursorDrawable="@drawable/cursor_orange"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/gl_register_right_of_image"
            app:layout_constraintStart_toStartOf="@+id/gl_register_left_of_email"
            app:layout_constraintTop_toBottomOf="@+id/et_register_emailaddress" />

        <EditText
            android:id="@+id/et_register_last_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/layout_border"
            android:backgroundTint="@color/white"
            android:drawableLeft="@drawable/ic_last_name"
            android:drawablePadding="16dp"
            android:ems="10"
            android:hint="@string/last_name"
            android:inputType="text"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:textCursorDrawable="@drawable/cursor_orange"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/gl_register_right_of_image"
            app:layout_constraintStart_toStartOf="@+id/gl_register_left_of_email"
            app:layout_constraintTop_toBottomOf="@+id/et_register_first_name" />

        <EditText
            android:id="@+id/et_register_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/layout_border"
            android:backgroundTint="@color/white"
            android:drawableLeft="@drawable/ic_password"
            android:drawablePadding="16dp"
            android:ems="10"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:textCursorDrawable="@drawable/cursor_orange"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/gl_register_right_of_image"
            app:layout_constraintStart_toStartOf="@+id/gl_register_left_of_email"
            app:layout_constraintTop_toBottomOf="@+id/et_register_last_name" />

        <EditText
            android:id="@+id/et_register_confirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/layout_border"
            android:backgroundTint="@color/white"
            android:drawableLeft="@drawable/ic_confirm"
            android:drawablePadding="16dp"
            android:ems="10"
            android:hint="@string/confirm_pasword"
            android:inputType="textPassword"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:textCursorDrawable="@drawable/cursor_orange"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/gl_register_right_of_image"
            app:layout_constraintStart_toStartOf="@+id/gl_register_left_of_email"
            app:layout_constraintTop_toBottomOf="@+id/et_register_password" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/rounded_button_orange"
            android:backgroundTint="@color/orangeAppColor"
            android:text="@string/register"
            android:textColor="@color/black"
            app:layout_constraintEnd_toStartOf="@+id/gl_register_right_of_image"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/gl_register_left_of_email"
            app:layout_constraintTop_toBottomOf="@+id/et_register_confirm" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_register_right_of_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="0dp"
            app:layout_constraintGuide_percent="0.85" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_register_left_of_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="0dp"
            app:layout_constraintGuide_percent="0.15" />

        <TextView
            android:id="@+id/tv_register_logo_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logo_description"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/gl_register_right_of_image"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/gl_register_left_of_email"
            app:layout_constraintTop_toBottomOf="@+id/tv_register_logo_name" />

        <TextView
            android:id="@+id/tv_register_logo_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logo_name"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/gl_register_right_of_image"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/gl_register_left_of_email"
            app:layout_constraintTop_toBottomOf="@+id/iv_register_logo" />

        <ImageView
            android:id="@+id/iv_register_logo"
            android:layout_width="120dp"
            android:layout_height="120dp"
            app:layout_constraintEnd_toStartOf="@+id/gl_register_right_of_image"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="@+id/gl_register_left_of_email"
            app:layout_constraintTop_toTopOf="@+id/gl_register_above_logo"
            app:srcCompat="@drawable/orangepaw" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_register_above_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="0dp"
            app:layout_constraintGuide_percent="0.07" />

        <ProgressBar
            android:id="@+id/pb_register"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:translationZ="10dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:indeterminate="true"
            android:indeterminateDrawable="@drawable/my_progress_indeterminate"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
