<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Activities.DeveloperNotesActivity">

    <TextView
        android:id="@+id/tv_developer_notes_logo_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logo_description"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_developer_notes_name" />

    <TextView
        android:id="@+id/tv_developer_notes_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logo_name"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_developer_notes_logo" />

    <ImageView
        android:id="@+id/iv_developer_notes_logo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="30dp"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/orangepaw" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_developer_note_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="0dp"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_developer_notes_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="0dp"
        app:layout_constraintGuide_percent="0.85" />

    <TextView
        android:id="@+id/tv_developer_notes_about_app"
        android:layout_width="0dp"
        android:justificationMode="inter_word"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/aboutTindergree"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/gl_developer_notes_right"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/gl_developer_note_left"
        app:layout_constraintTop_toBottomOf="@+id/tv_developer_notes_logo_description" />
</androidx.constraintlayout.widget.ConstraintLayout>